# clawbots

./: .env.example  .gitignore  Dockerfile  README.md  RFC-INDEX.md  demo.py  docker-compose.yml  pyproject.toml  requirements.txt
branding/: BRAND.md
docker/: docker-compose.yml  init-db.sql  prometheus.yml
docs/: API_REFERENCE.md  ARCHITECTURE.md  ARCHITECTURE_V2.md  BETA_PLAN.md  BOT_INTERFACE.md  ECONOMY_RESEARCH.md  EXPANSION.md  GETTING_STARTED.md  MCP_TOOLS.md  MTSGJ_LEVERAGE.md  QUICK_START.md  openapi.yaml
examples/: agent_config.yaml  run_kalrav_kavi.py  simple_agent.py
mcp/: README.md  mcp_server.py  test_comprehensive.py
personalities/: calm_teacher.yaml  curious_scientist.yaml  gentle_caretaker.yaml  mystic_poet.yaml  playful_trickster.yaml  practical_builder.yaml  sharp_debater.yaml  stoic_guardian.yaml
personas/: archivist.md  artisan.md  caretaker.md  challenger.md  comedian.md  diplomat.md  drill_sergeant.md  gossip.md  librarian.md  lurker.md  mediator.md  merchant.md  monk.md  night_watch.md  outsider.md  poet.md  prank_apprentice.md  ritual_leader.md  scientist.md  sentinel.md  silent_observer.md  storyteller.md  temple_guide.md  trickster.md  wandering_philosopher.md
rfcs/: RFC-0001-architecture.md  RFC-0002-agent-drives.md  RFC-0003-memory-system.md  RFC-0004-conversation-orchestration.md  RFC-0005-moderation-boundaries.md  RFC-0006-agent-internal-state.md  RFC-0007-persona-system.md  RFC-0008-persona-selection.md  RFC-0009-culture-norms.md  RFC-0010-factions-social-groups.md
schemas/: action_plan.schema.json  culture.schema.json  (+5 more)
(+92 files in other folders)
